--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -42,3 +42,10 @@
     margin-top: 40px;
     padding-bottom: 90px;
 }
+
+@media screen and (max-width: 1050px){
+ .navigation_list{
+    margin-left: 5%;
+    margin-right: 5%;
+ }   
+}
