--- a/styles/components/portfolio.css
+++ b/styles/components/portfolio.css
@@ -21,3 +21,9 @@
     font-size: 18px;
     padding-bottom: 80px;
 }
+
+@media screen and (max-width: 1050px) {
+    .porfolio-img{
+        max-width: 95%;
+    }
+}
